# wildfire-evacuation-crc

./: .gitignore  README.md  main.py  paper.tex  pyproject.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
data/: README.md
data/splits/: ndws_seed42_70_15_15.json
fire/: __init__.py
fire/conformal/: calibrate.py  crc.py  threeway.py
fire/data/: __init__.py  constants.py  download.py  pipeline.py  prepare.py  readers.py  spatial_loader.py  splits.py  tabular_loader.py
fire/eval/: bootstrap_ci.py  evaluate.py  metrics.py  plot.py  plot_comparison.py  plot_extra.py  plot_risk_map.py
fire/models/: __init__.py  spatial_baseline.py  tabular_baseline.py
guide/: train_unet.md
icml2026/: lit_review.md  paper_draft.bib  paper_draft.tex
notebooks/: ndws-resgnn-unet.ipynb  resgnn_colab.ipynb  results.ipynb  train_unet_kaggle.py
presentation/: build.js  package-lock.json  package.json  presentation.pptx  presentation_draft.pptx
